Update ssh (ed25519), add termux (android support).

--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -11,7 +11,11 @@
 {{- $pass := false -}}
 {{- "" -}}
 
+{{ if .chezmoi.os "android" }}
+{{- $name := "mariodroid" -}}
+{{ else }}
 {{- $name := "Romario" -}}
+{{- end -}}
 {{- $git_name := "romariorobby" -}}
 {{- $git_email := "romariorobby@yahoo.com" -}}
 
