--- a/private_dot_config/git/config.tmpl
+++ b/private_dot_config/git/config.tmpl
@@ -1,6 +1,10 @@
 # vim:ft=gitconfig
 [user]
+{{ if eq .chezmoi.os "android" }}
+	name = mariodroid
+{{ else }}
 	name = {{ .git.name }}
+{{ end }}
 	email = {{ .git.email }}
 
 [http]
