--- a/private_dot_ssh/id_rsa.pub.tmpl
+++ b/private_dot_ssh/id_rsa.pub.tmpl
@@ -1,15 +1,15 @@
 {{- if .secret -}}
 {{-   if .bw -}}
 {{-     if (eq .chezmoi.os "linux") }}
-{{-       (bitwarden "item" "archlaptop-sshpub").notes -}}
+{{-       (bitwarden "item" "archlaptop-rsapub").notes -}}
 {{-     else if (eq .chezmoi.os "darwin") }}
-{{-       (bitwarden "item" "macbook-sshpub").notes -}}
+{{-       (bitwarden "item" "macbook-rsapub").notes -}}
 {{-     end -}}
 {{-   else if .pass -}}
 {{-     if (eq .chezmoi.os "linux") }}
-{{-       pass "ssh/archlaptop-sshpub" -}}
+{{-       pass "ssh/archlaptop-rsapub" -}}
 {{-     else if (eq .chezmoi.os "darwin") }}
-{{-       pass "ssh/macbook-sshpub" -}}
+{{-       pass "ssh/macbook-rsapub" -}}
 {{-     end -}}
 {{-   end -}}
 {{- end -}}
