--- a/.chezmoi.toml.tmpl
+++ b/.chezmoi.toml.tmpl
@@ -11,11 +11,6 @@
 {{- $pass := false -}}
 {{- "" -}}
 
-{{ if .chezmoi.os "android" }}
-{{- $name := "mariodroid" -}}
-{{ else }}
-{{- $name := "Romario" -}}
-{{- end -}}
 {{- $git_name := "romariorobby" -}}
 {{- $git_email := "romariorobby@yahoo.com" -}}
 
@@ -45,9 +40,9 @@
 {{-     $pass = promptBool "pass" -}}
 {{-   end -}}
 
-{{-   $name := promptString "Username for Chezmoi" -}}
-{{-   $git_name := promptString "Git Username for author/commiter" -}}
-{{-   $git_email := promptString "Git Email Adress for author/commiter" -}}
+# {{-   $name := promptString "Username for Chezmoi" -}}
+{{-   $git_name := promptString "[Git] Username for author/commiter" -}}
+{{-   $git_email := promptString "[Git] Email Address for author/commiter" -}}
 {{- end -}}
 
 # GPG
@@ -56,7 +51,6 @@ encryption = "gpg"
   symmetric = "true"
 
 [data]
-  name = "{{ $name }}"
   minimal = {{ $minimal }}
   secret = {{ $secret }}
   pass = {{ $pass }}
