--- a/private_dot_config/zsh/dot_zshrc.tmpl
+++ b/private_dot_config/zsh/dot_zshrc.tmpl
@@ -1,5 +1,6 @@
 # vim:ft=zsh
 #
+fpath=("${ZDOTDIR:-$HOME/.config/zsh}/completions" $fpath)
 # Enable colors and change prompt:
 autoload -U colors && colors	# Load colors
 PS1="%B%{$fg[red]%}[%{$fg[yellow]%}%n%{$fg[green]%}@%{$fg[blue]%}%M %{$fg[magenta]%}%~%{$fg[red]%}]%{$reset_color%}$%b "
